# rbt4dnn-seminar

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  NOTICE.md  README.md  artifact.md  cost_valid_failure.ipynb  pyproject.toml  replication_mnist.ipynb  rerun_mnist_model.py  valid_failure_overview.ipynb
.github/workflows/: ci.yml  pages.yml
data/: README.md  input.csv  manifest-files.tsv  manifest.json
data/results/: mnist-replication.csv  valid-failures.csv
docs/: artifact.md
experiments/celeba-shared-generator/: celeba_shared_generator.py  notebook.ipynb  results.csv  seed-results.csv  summary.md  training-log.csv
experiments/cost-analysis/: assumptions.csv  cost_analysis.py  cost_valid_failure.ipynb  notebook.ipynb  results.csv  run.py  summary.md  valid-failures.csv
experiments/costs/: assumptions.csv  notebook.ipynb
experiments/gemini-validity-audit/: gemini_validity_audit.py  notebook.ipynb  results.csv  summary.md
experiments/lance-dataset/: build.py
experiments/llm-validity-audit/: llm_validity_audit.py  notebook.ipynb  results.csv  sample-manifest.csv  summary.md
experiments/mnist/: notebook.ipynb  run.py
experiments/mnist-lora-ablation/: mnist_lora_ablation.py  notebook.ipynb  results.csv  summary.md
experiments/mnist-shared-generator/: mnist_shared_generator.py  notebook.ipynb  results.csv  seed-results.csv  summary.md  training-log.csv
experiments/mnist-shared-lora-pilot/: notebook.ipynb  results-template.csv  shared_lora_pilot.py  summary.md
experiments/precondition-validity/: notebook.ipynb  precondition_validity.py  results.csv  summary.md
experiments/replication/: notebook.ipynb  results.csv  run.py  summary.md
experiments/replication-mnist/: replication_mnist.ipynb  rerun_mnist_model.py
experiments/valid-failure/: valid_failure_overview.ipynb
references/: README.md
scripts/: build-dataset.py  build-lance.py  check_publication.py  colab_celeba_job.py  colab_job.py  export_presentation_pdf.sh  fetch_data.py  reproduce.py  run_experiments.py
slides/: ASSET_PROVENANCE.md  DESIGN_SYSTEM.md  index.html
src/: costs.py  dataset.py  mnist.py  paths.py  replication.py  shared.py
src/rbt4dnn_seminar/: __init__.py  (+4 more)
tests/: test_data_contracts.py
(+5 files in other folders)
