[project]
name = "rbt4dnn-seminar"
version = "0.1.0"
description = "Seminar replication and extension work for RBT4DNN."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "pyarrow>=24.0.0",
    "pylance>=8.0.0",
    "torch>=2.2",
    "transformers>=4.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.56",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/rbt4dnn_seminar"]

[tool.ruff]
line-length = 100
target-version = "py311"
