[project]
name = "rbt4dnn-seminar"
version = "0.1.0"
description = "Seminar replication and extension work for RBT4DNN."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "torch>=2.2",
    "torchvision>=0.27.1",
    "transformers>=4.45",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.56",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ty.environment]
extra-paths = [
    "src",
    "experiments/celeba-shared-generator",
    "experiments/cost-analysis",
    "experiments/llm-validity-audit",
    "experiments/mnist-lora-ablation",
    "experiments/mnist-shared-generator",
    "experiments/precondition-validity",
    "scripts",
]
